--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,18 @@ hr {
   border-radius: 20px;
   background: #45aed6;
 }
+
+.special-btn{
+    color: #2caab3;
+    background-color: white;
+}
+
+.btn.special-btn:hover,
+.btn.special-btn:focus {
+  background: #2caab3;
+    color: white;
+}
+
 .btn {
   border-width: 0;
   border-bottom-width: 3px;
@@ -930,6 +942,7 @@ ul.nostyle i {
   display: inline-block;
   margin: 0 7.5px;
 }
+
 @media only screen and (min-width: 768px) {
   #footer .social-icons {
     float: right;
